# simple_sitemap_parser

./: .env(example)  .gitignore  README.md  example_xml.py  main.py  parser_v2.py  parser_v3.py  parser_v4.py  pyproject.toml  write_db.py
parser/: parser.py
