[tool.poetry]
name = "simple_sitemap_parser"
version = "0.1.0"
description = ""
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]
packages = [
    { include = "parser" },
]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^4.0.1"
bs4 = "^0.0.1"
requests = "^2.27.1"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
